[gd_scene load_steps=21 format=3 uid="uid://dnml11iufdmur"]

[ext_resource type="Texture2D" uid="uid://cy1mqlqplg0jr" path="res://assets/images/menus/menuDesat.png" id="1_o3fiu"]
[ext_resource type="Script" path="res://game/menus/FreeplayMenu.gd" id="1_w8gdj"]
[ext_resource type="Script" path="res://resources/menus/FreeplaySong.gd" id="3_f42ty"]
[ext_resource type="FontFile" uid="uid://cyai6bejgesmn" path="res://assets/data/fonts/vcr.ttf" id="4_ajxwu"]
[ext_resource type="Script" path="res://game/ui/Alphabet.gd" id="5_rpm71"]

[sub_resource type="Resource" id="Resource_0jo84"]
script = ExtResource("3_f42ty")
name = "Test"
folder = "test"
color = Color(1, 1, 1, 1)
difficulties = Array[String](["normal"])
icon = "bf-pixel"
icon_frames = 2

[sub_resource type="Resource" id="Resource_ulprl"]
script = ExtResource("3_f42ty")
name = "cock and ball torture"
folder = "starcatcher-hoo-hah"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_dbgo8"]
script = ExtResource("3_f42ty")
name = "ODAKVSIKO"
folder = "lunar-odyssey"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_vlww1"]
script = ExtResource("3_f42ty")
name = "my fucking rumble"
folder = "my-rumble"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_werw4"]
script = ExtResource("3_f42ty")
name = "Clown Around Town"
folder = "clown-around-town"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_555l8"]
script = ExtResource("3_f42ty")
name = "Davozila"
folder = "zavodila"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_1wa6q"]
script = ExtResource("3_f42ty")
name = "Double Kill"
folder = "double-kill"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_q2c2l"]
script = ExtResource("3_f42ty")
name = "Delusion"
folder = "delusion"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Resource" id="Resource_i5gnj"]
script = ExtResource("3_f42ty")
name = "Fuss Erect"
folder = "fuss-erect"
color = Color(1, 1, 1, 1)
difficulties = Array[String]([])
icon = "bf"
icon_frames = 2

[sub_resource type="Gradient" id="Gradient_3a1d3"]
offsets = PackedFloat32Array(0.842593)
colors = PackedColorArray(0, 0, 0, 0.705882)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_se0la"]
gradient = SubResource("Gradient_3a1d3")

[sub_resource type="Gradient" id="Gradient_j3d1m"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.588235)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_34k8c"]
gradient = SubResource("Gradient_j3d1m")

[sub_resource type="Gradient" id="Gradient_v5v3d"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jhudh"]
gradient = SubResource("Gradient_v5v3d")

[node name="FreeplayMenu" type="Node2D"]
script = ExtResource("1_w8gdj")
songs = Array[ExtResource("3_f42ty")]([SubResource("Resource_0jo84"), SubResource("Resource_ulprl"), SubResource("Resource_dbgo8"), SubResource("Resource_vlww1"), SubResource("Resource_werw4"), SubResource("Resource_555l8"), SubResource("Resource_1wa6q"), SubResource("Resource_q2c2l"), SubResource("Resource_i5gnj")])

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(635.902, 364.75)
texture = ExtResource("1_o3fiu")

[node name="UI" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="score_bg" type="Sprite2D" parent="UI/Score"]
position = Vector2(1112, 36)
scale = Vector2(5.25, 1.125)
texture = SubResource("GradientTexture2D_se0la")

[node name="score_label" type="Label" parent="UI/Score"]
layout_mode = 0
offset_left = 952.0
offset_top = 8.0
offset_right = 1256.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_ajxwu")
theme_override_font_sizes/font_size = 32
text = "PERSONAL BEST: 0"

[node name="diff_label" type="Label" parent="UI/Score"]
layout_mode = 0
offset_left = 1040.0
offset_top = 40.0
offset_right = 1168.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("4_ajxwu")
theme_override_font_sizes/font_size = 24
text = "< HARD >"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Queue" type="Control" parent="UI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = 24.0
offset_top = -178.0
offset_right = 64.0
offset_bottom = -138.0

[node name="queue_bg" type="Sprite2D" parent="UI/Queue"]
position = Vector2(1136, 656)
scale = Vector2(1, 436.25)
texture = SubResource("GradientTexture1D_34k8c")

[node name="queue_title" type="Label" parent="UI/Queue"]
layout_mode = 0
offset_left = 1038.0
offset_top = 440.0
offset_right = 1228.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("4_ajxwu")
theme_override_font_sizes/font_size = 32
text = "[PLAYLIST]"

[node name="queue_songs" type="Label" parent="UI/Queue"]
layout_mode = 0
offset_left = 1008.0
offset_top = 480.0
offset_right = 1255.0
offset_bottom = 768.0
theme_override_fonts/font = ExtResource("4_ajxwu")
theme_override_font_sizes/font_size = 18
text = "1: BLAH
2: BLAH
3: BLAH
4: BLAH
5: BLAH
6: BLAH
7: BLAH
8: BLAH
9: BLAH
10: BLAH
11: BLAH
12: BLAH
13: BLAH
14: BLAH
15: BLAH
16: BLAH
17: BLAH
18: BLAH
19: BLAH
20: BLAH"

[node name="Tooltip Bar" type="Sprite2D" parent="UI"]
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(638, 708)
scale = Vector2(5.01563, 24)
texture = SubResource("GradientTexture1D_jhudh")

[node name="Tooltip Text" type="Label" parent="UI"]
layout_mode = 0
offset_left = 4.0
offset_top = 700.0
offset_right = 1264.0
offset_bottom = 719.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ajxwu")
theme_override_font_sizes/font_size = 18
text = "SPACE : Listen to Selected Song â€¢ CTRL : Add Song to Playlist"

[node name="Song Group" type="Node" parent="."]

[node name="Icon Group" type="Node" parent="."]

[node name="Song Template" type="ReferenceRect" parent="."]
offset_top = 8.0
offset_right = 272.0
offset_bottom = 52.0
script = ExtResource("5_rpm71")
text = "Template"
